Initialize project and link to calix repository

--- a/index.html
+++ b/index.html
@@ -3,21 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1.0, user-scalable=no" />
-    <title>Workout Timer</title>
+    <title>Your Workout Timer</title>
     <meta name="description" content="Customizable interval workout timer with work, rest, preparation phases and progressive adjustments" />
-    <meta name="author" content="Lovable" />
-    <meta name="theme-color" content="#0d1117" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-
-    <meta property="og:title" content="Workout Timer" />
+    <meta name="author" content="Your Workout Timer" />
+    <meta property="og:title" content="Your Workout Timer" />
     <meta property="og:description" content="Customizable interval workout timer with work, rest, preparation phases" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Your Workout Timer" />
+    <meta name="twitter:description" content="Customizable interval workout timer with work, rest, preparation phases" />
     
     <!-- Google Fonts for better typography -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
